fixed bug with invisible menu

--- a/client/src/css/components/gallery.css
+++ b/client/src/css/components/gallery.css
@@ -2,6 +2,10 @@
   padding: 20px;
   display: flex;
   margin: 20px;
+  height: auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .GalleryElement {
@@ -9,6 +13,7 @@
   display: block;
   max-width: fit-content;
   height: 200px;
+  width: 200px;
   margin: 10px;
 }
 
@@ -31,7 +36,7 @@
   opacity: 0%;
   transition: 500ms;
   pointer-events: none;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.75);
   color: white;
   top: -200px
 }
